package pt.ipp.isep.dei.esoft.project.domain;

public class Commission {

    private double fixedAmount;

    private int percentage;
}
